--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/p-hsu/employee-tracker/issues"
   },
-  "homepage": "https://github.com/p-hsu/employee-tracker#readme"
+  "homepage": "https://github.com/p-hsu/employee-tracker#readme",
+  "dependencies": {
+    "console.table": "^0.10.0",
+    "dotenv": "^8.2.0",
+    "inquirer": "^8.0.0"
+  }
 }
