--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "dotenv": "^8.2.0",
-    "inquirer": "^8.0.0"
+    "inquirer": "^8.0.0",
+    "mysql": "^2.18.1",
+    "util": "^0.12.3"
   }
 }
